Bug 186991 - bindings: csharp qttest doesn't compile with qt without accessability
Summary: bindings: csharp qttest doesn't compile with qt without accessability
Status: RESOLVED FIXED
Alias: None
Product: bindings
Classification: Unmaintained
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Compiled Sources Linux
: NOR normal
Target Milestone: ---
Assignee: bindings-bugs-null
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2009-03-12 17:55 UTC by Peter Häring
Modified: 2009-03-12 18:07 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Peter Häring 2009-03-12 17:55:22 UTC
Version:            (using KDE 4.2.1)
Compiler:          gcc-4.3.2 
OS:                Linux
Installed from:    Compiled From Sources

Bug is in file csharp/qttest/src/qttesthandlers.cpp
This file uses struct QTestAccessibilityEvent. The struct is defined in the included file <QtTest/qtestaccessible.h>. But in my case, QT_NO_ACCESSIBILITY is defined as seen in file smoke/qtdefines, and the whole header file is bypassed by the preprocessor directive #ifndef QT_NO_ACCESSIBILITY => compilation stops.
Comment 1 Arno Rehn 2009-03-12 18:01:38 UTC
SVN commit 938681 by arnorehn:

add a #ifndef QT_NO_ACCESSIBILITY directive to fix compilation
on systems that don't have accessibility in Qt.

BUG: 186991



 M  +4 -0      qttesthandlers.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=938681
Comment 2 Peter Häring 2009-03-12 18:04:30 UTC
In this case, linking is not possible, because QtTest_handlers is not defined
Comment 3 Peter Häring 2009-03-12 18:07:19 UTC
Sorry, didn't read the bugfix till the end. Fixes it. ok.