add a #ifndef QT_NO_ACCESSIBILITY directive to fix compilation on systems that don't have accessibility in Qt.

BUG: 186991


svn path=/trunk/KDE/kdebindings/csharp/; revision=938681